force-app/main/default/objects/Ski_Board_Asset__c/Ski_Board_Asset__c.object-meta.xml
<CustomObject>
    <label>Ski Board Asset</label>
    <nameField>
        <displayFormat>SB-{000000}</displayFormat>
        <label>Ski Board Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ski Board Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>