force-app/main/default/objects/Ski_Board_Asset__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <label>Series</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vendor__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Allora</fullName>
            </value>
            <value>
                <fullName>Amber Valley</fullName>
            </value>
            <value>
                <fullName>Americana</fullName>
            </value>
            <value>
                <fullName>American Classic</fullName>
            </value>
            <value>
                <fullName>Amiata</fullName>
            </value>
            <value>
                <fullName>Avenue One</fullName>
            </value>
            <value>
                <fullName>Avila</fullName>
            </value>
            <value>
                <fullName>Bright &amp; Matte Group 1</fullName>
            </value>
            <value>
                <fullName>Bright &amp; Matte Group 2-5</fullName>
            </value>
            <value>
                <fullName>Bright &amp; Matte Profiles</fullName>
            </value>
            <value>
                <fullName>Brillante Glass Liner Bars</fullName>
            </value>
            <value>
                <fullName>Buenos Aires Mood Polished</fullName>
            </value>
            <value>
                <fullName>Buenos Aires Mood Textured</fullName>
            </value>
            <value>
                <fullName>Buenos Aires Mood Unpolished</fullName>
            </value>
            <value>
                <fullName>Carriage House</fullName>
            </value>
            <value>
                <fullName>Ceramic Mosaics Grp 1,2,3, &amp; 4</fullName>
            </value>
            <value>
                <fullName>Ceramic Mosaics Grp 1 &amp; 2</fullName>
            </value>
            <value>
                <fullName>Color Blox</fullName>
            </value>
            <value>
                <fullName>Color Blox Mosaics Bd 1</fullName>
            </value>
            <value>
                <fullName>Color Blox Mosaics Bd 2</fullName>
            </value>
            <value>
                <fullName>Color Blox Mosaics Bd 3</fullName>
            </value>
            <value>
                <fullName>Color Blox Too</fullName>
            </value>
            <value>
                <fullName>Costa Rei</fullName>
            </value>
            <value>
                <fullName>Costa Rei Mosaics</fullName>
            </value>
            <value>
                <fullName>Cotto Americana</fullName>
            </value>
            <value>
                <fullName>Cross Colors Mingle Bd 1</fullName>
            </value>
            <value>
                <fullName>Cross Colors Mingle Bd 2</fullName>
            </value>
            <value>
                <fullName>Cross Colors Solid Bd 1</fullName>
            </value>
            <value>
                <fullName>Cross Colors Solid Bd 2</fullName>
            </value>
            <value>
                <fullName>Ecocycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>