force-app/main/default/objects/Ski_Board_Asset__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Olean</fullName>
            </value>
            <value>
                <fullName>Aqua Mix</fullName>
            </value>
            <value>
                <fullName>Atlas Concorde</fullName>
            </value>
            <value>
                <fullName>Casa Dolce Casa</fullName>
            </value>
            <value>
                <fullName>Crossville</fullName>
            </value>
            <value>
                <fullName>Custom Building Products</fullName>
            </value>
            <value>
                <fullName>Florida Tile</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Imola</fullName>
            </value>
            <value>
                <fullName>Jeffrey Court</fullName>
            </value>
            <value>
                <fullName>Laticrete</fullName>
            </value>
            <value>
                <fullName>LTD Forum</fullName>
            </value>
            <value>
                <fullName>Mandala</fullName>
            </value>
            <value>
                <fullName>Mission Stone</fullName>
            </value>
            <value>
                <fullName>MLW</fullName>
            </value>
            <value>
                <fullName>Noble</fullName>
            </value>
            <value>
                <fullName>Oceanside</fullName>
            </value>
            <value>
                <fullName>Orchid</fullName>
            </value>
            <value>
                <fullName>Panaria</fullName>
            </value>
            <value>
                <fullName>Ragno</fullName>
            </value>
            <value>
                <fullName>Realstone</fullName>
            </value>
            <value>
                <fullName>Royal Mosa</fullName>
            </value>
            <value>
                <fullName>Schluter</fullName>
            </value>
            <value>
                <fullName>Sonoma Market</fullName>
            </value>
            <value>
                <fullName>Suntouch</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>TEC</fullName>
            </value>
            <value>
                <fullName>Urban Collection</fullName>
            </value>
            <value>
                <fullName>Waterjet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>